<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="3dp"
    android:fitsSystemWindows="true"
    tools:context=".TestVocables">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#673AB7"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="Vokabeltest" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:text=""
                android:textSize="34sp" />

            <EditText
                android:id="@+id/textAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Antwort"
                android:height="48dp"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:hint="@string/answer"
                android:inputType="textNoSuggestions"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:textSize="20sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stopTestView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/exit_test"
        android:focusable="true"
        app:backgroundTint="#F50057"
        app:tint="@color/black"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>